feat: few more sections

--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
-    <title>Contact Us - Gloria Agency Inc.</title>
+    <title>Contact Us - Atlantic Inc.</title>
 
     <meta name="description"
-        content="Contact Gloria Agency Inc. for trusted Medicare services in Illinois, Texas, and Wisconsin. Our expert advisors provide clear guidance and support tailored to your needs.">
+        content="Contact Atlantic Inc. for trusted Medicare services in Illinois, Texas, and Wisconsin. Our expert advisors provide clear guidance and support tailored to your needs.">
     <meta name="keywords"
         content="medicare services, medicare services in Illinois, medicare services in texas, medicare services in wisconsin, medicare part d, medicare supplement, medicare advisors">
 
@@ -46,7 +46,7 @@
         <nav class="navbar navbar-expand-xl navbar-dark">
             <div class="container">
                 <div class="logo-section">
-                    <a href="/index.html"><img class="logo" src="/img/logo.png" alt="Gloria Agency Logo Image"></a>
+                    <a href="/index.html"><img class="logo" src="/img/logo.png" alt="Atlantic Logo Image"></a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">
@@ -377,7 +377,7 @@
             <hr class="mt-4" />
 
 
-            <p class="pt-2 pb-3 fw-500 text-info text-center">&copy Gloria Agency 2024. All rights
+            <p class="pt-2 pb-3 fw-500 text-info text-center">&copy Atlantic 2024. All rights
                 reserved.</p>
             <p class="pt-2 pb-3 fw-500 text-info text-center">The content available on this website is owned by us and
                 our licensors. Copying any content, including images, without our consent is prohibited.</p>
