--- a/illinois-medicare-services.html
+++ b/illinois-medicare-services.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
-    <title>Medicare Services in Illinois - Gloria Agency Inc.</title>
+    <title>Medicare Services in Illinois - Atlantic Inc.</title>
 
-    <meta name="description" content="Explore reliable Medicare services in Illinois with Gloria Agency Inc. 
+    <meta name="description" content="Explore reliable Medicare services in Illinois with Atlantic Inc. 
         Our expert advisors provide clear guidance and support tailored to your needs.
         ">
     <meta name="keywords"
@@ -47,7 +47,7 @@
         <nav class="navbar navbar-expand-xl navbar-dark">
             <div class="container">
                 <div class="logo-section">
-                    <a href="/index.html"><img class="logo" src="/img/logo.png" alt="Gloria Agency Logo Image"></a>
+                    <a href="/index.html"><img class="logo" src="/img/logo.png" alt="Atlantic Logo Image"></a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">
@@ -150,19 +150,19 @@
             <div class="about-us-flex">
                 <div class="info-div">
                     <p class="sub-header">
-                        Gloria agency
+                        Atlantic
                     </p>
                     <h3 class="header">
                         Get a Free Quote for Illinois Residents
                     </h3>
                     <p class="mb-4">
-                        Figuring out Medicare in Illinois can be confusing, but at Gloria Agency Inc., we're here to
+                        Figuring out Medicare in Illinois can be confusing, but at Atlantic Inc., we're here to
                         help.
                         Our trusted Medicare services provide clear guidance and support tailored to your needs. Whether
                         you're exploring coverage options or need help with enrollment, count on us to make Medicare
                         easy to understand and accessible for you.
                         <br><br>
-                        At Gloria Agency Inc., we're committed to your peace of mind. With our unbiased guidance and
+                        At Atlantic Inc., we're committed to your peace of mind. With our unbiased guidance and
                         reliable support, we'll help you navigate Medicare with ease. Trust us to be your go-to partner
                         in Illinois for all your Medicare need
                     </p>
@@ -177,7 +177,7 @@
                     </div>
                 </div>
                 <div class="img-div">
-                    <img src="/img/senior-group-indoor.jpeg" alt="Gloria agency">
+                    <img src="/img/senior-group-indoor.jpeg" alt="Atlantic">
                 </div>
             </div>
         </div>
@@ -393,7 +393,7 @@
                         Why We Are The Best
                     </p>
                     <h3 class="header">
-                        Why Gloria Agency is Your Trusted Medicare Partner
+                        Why Atlantic is Your Trusted Medicare Partner
                     </h3>
                     <ul class="mb-4">
                         <li>
@@ -426,7 +426,7 @@
                     </div>
                 </div>
                 <div class="img-div">
-                    <img src="/img/seniors-discussing.jpg" alt="Gloria agency">
+                    <img src="/img/seniors-discussing.jpg" alt="Atlantic">
                 </div>
             </div>
         </div>
@@ -531,7 +531,7 @@
             <hr class="mt-4" />
 
 
-            <p class="pt-2 pb-3 fw-500 text-info text-center">&copy Gloria Agency 2024. All rights
+            <p class="pt-2 pb-3 fw-500 text-info text-center">&copy Atlantic 2024. All rights
                 reserved.</p>
             <p class="pt-2 pb-3 fw-500 text-info text-center">The content available on this website is owned by us and
                 our licensors. Copying any content, including images, without our consent is prohibited.</p>
