--- a/img/Resources - Gloria Agency Inc..html
+++ b/img/Resources - Gloria Agency Inc..html
@@ -4,16 +4,16 @@
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
-    <title>Resources - Gloria Agency Inc.</title>
+    <title>Resources - Atlantic Inc.</title>
 
-    <meta name="description" content="Explore Medicare resources with Gloria Agency Inc. Our Medicare advisors offer guidance on Medicare Part D, supplements, and more in Illinois, Texas, and Wisconsin.">
+    <meta name="description" content="Explore Medicare resources with Atlantic Inc. Our Medicare advisors offer guidance on Medicare Part D, supplements, and more in Illinois, Texas, and Wisconsin.">
     <meta name="keywords" content="medicare services, medicare part d, medicare supplement, medicare advisors">
 
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./Resources - Gloria Agency Inc._files/index.css">
+    <link rel="stylesheet" href="./Resources - Atlantic Inc._files/index.css">
 
-    <link rel="stylesheet" href="./Resources - Gloria Agency Inc._files/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="./Resources - Atlantic Inc._files/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer">
 
     <link rel="apple-touch-icon" sizes="180x180" href="http://127.0.0.1:5500/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="http://127.0.0.1:5500/img/favicon-32x32.png">
@@ -38,7 +38,7 @@
         <nav class="navbar navbar-expand-xl navbar-dark">
             <div class="container" bis_skin_checked="1">
                 <div class="logo-section" bis_skin_checked="1">
-                    <a href="http://127.0.0.1:5500/es/indice.html" contenteditable="false" style="cursor: pointer;"><img class="logo" src="./Resources - Gloria Agency Inc._files/logo.png" alt="Gloria Agency Logo Image"></a>
+                    <a href="http://127.0.0.1:5500/es/indice.html" contenteditable="false" style="cursor: pointer;"><img class="logo" src="./Resources - Atlantic Inc._files/logo.png" alt="Atlantic Logo Image"></a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">
                     <i class="fa-solid fa-bars text-dark fs-22"></i>
@@ -48,7 +48,7 @@
                 <div class="offcanvas-xl offcanvas-end w-100" tabindex="-1" id="offcanvasResponsive" aria-labelledby="offcanvasResponsiveLabel" bis_skin_checked="1">
                     <div class="offcanvas-header bg-dark" bis_skin_checked="1">
                         <div class="logo-section mb-0 d-xl-none d-inline" bis_skin_checked="1">
-                            <a href="http://127.0.0.1:5500/es/indice.html" contenteditable="false" style="cursor: pointer;"><img class="logo" src="./Resources - Gloria Agency Inc._files/logo.png" alt="Canvas Logo"></a>
+                            <a href="http://127.0.0.1:5500/es/indice.html" contenteditable="false" style="cursor: pointer;"><img class="logo" src="./Resources - Atlantic Inc._files/logo.png" alt="Canvas Logo"></a>
                         </div>
 
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive" aria-label="Close"></button>
@@ -123,7 +123,7 @@
             <!-- <video autoplay loop muted playsinline>
                 <source src="/videos/old-people-playing.mp4" type="video/mp4">
             </video> -->
-            <img class="hero-img" style="object-position:30% 30%;" src="./Resources - Gloria Agency Inc._files/senior-people-jumping-full.jpg" alt="Hero background Image">
+            <img class="hero-img" style="object-position:30% 30%;" src="./Resources - Atlantic Inc._files/senior-people-jumping-full.jpg" alt="Hero background Image">
         </div>
     </section>
 
@@ -133,7 +133,7 @@
             <div class="flex" bis_skin_checked="1">
                 <div class="resource" bis_skin_checked="1">
                     <div class="img-div" bis_skin_checked="1">
-                        <img src="./Resources - Gloria Agency Inc._files/seniors-discussing.jpg" alt="Medicare Card">
+                        <img src="./Resources - Atlantic Inc._files/seniors-discussing.jpg" alt="Medicare Card">
                     </div>
                     <div class="info-div" bis_skin_checked="1">
                         <h3 class="title">
@@ -155,7 +155,7 @@
                 </div>
                 <div class="resource" bis_skin_checked="1">
                     <div class="img-div" bis_skin_checked="1">
-                        <img src="./Resources - Gloria Agency Inc._files/senior-group-indoor.jpeg" alt="Medicare Card">
+                        <img src="./Resources - Atlantic Inc._files/senior-group-indoor.jpeg" alt="Medicare Card">
                     </div>
                     <div class="info-div" bis_skin_checked="1">
                         <h3 class="title">
@@ -256,7 +256,7 @@
         <div class="container mt-5" bis_skin_checked="1">
             <div class="row fw-500 fs-16" bis_skin_checked="1">
                 <div class="col-lg pe-lg-5 me-lg-5 col-12 mb-lg-0 mb-5 text-lg-left" bis_skin_checked="1">
-                    <img src="./Resources - Gloria Agency Inc._files/logo.png" alt="logo" class="d-inline-block logo my-auto mb-3">
+                    <img src="./Resources - Atlantic Inc._files/logo.png" alt="logo" class="d-inline-block logo my-auto mb-3">
                 </div>
 
                 <div class="col-lg col-md-4 col-12 mb-lg-0 mb-4 footer-col text-left" bis_skin_checked="1">
@@ -332,7 +332,7 @@
             <hr class="mt-4">
 
 
-            <p class="pt-2 pb-3 fw-500 text-info text-center">© Gloria Agency 2024. Todos los derechos reservados.
+            <p class="pt-2 pb-3 fw-500 text-info text-center">© Atlantic 2024. Todos los derechos reservados.
             </p>
             <p class="pt-2 pb-3 fw-500 text-info text-center">El contenido disponible en este sitio web es de nuestra
                 propiedad y
@@ -343,10 +343,10 @@
 
 
     <!-- Scripts -->
-    <script src="./Resources - Gloria Agency Inc._files/jquery-3.6.1.min.js.download" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script src="./Resources - Atlantic Inc._files/jquery-3.6.1.min.js.download" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 
 
-    <script src="./Resources - Gloria Agency Inc._files/index.js.download"></script>
+    <script src="./Resources - Atlantic Inc._files/index.js.download"></script>
 <!-- Code injected by live-server -->
 <script>
 	// <![CDATA[  <-- For SVG support
