--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <!-- Top of the navbar -->
-    <section class="nav-hero position-relative" style="overflow: hidden;">
+    <section class="nav-hero position-relative mb-0" style="overflow: hidden;">
         <div class="first-nav py-2">
             <div class="container py-1">
                 <div class="d-flex justify-content-end gap-5">
@@ -49,7 +49,7 @@
         <nav class="navbar navbar-expand-xl navbar-dark">
             <div class="container">
                 <div class="logo-section">
-                    <a href="/index.html"><img class="logo" src="/img/logo.png" alt="Gloria Agency Logo Image"></a>
+                    <a href="/index.html"><img class="logo" src="/img/logo.png" alt="Atlantic Logo Image"></a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">
@@ -149,6 +149,27 @@
                 <source src="/videos/old-people-playing.mp4" type="video/mp4">
             </video> -->
             <img class="hero-img" src="/img/hero.jpg" alt="Hero background Image">
+        </div>
+    </section>
+
+    <!-- Logos Marquee -->
+    <section data-aos="fade-up" class="marquee-section">
+        <div class="marquee">
+            <div class="marquee_group">
+                <img src="/img/AMADA.jpg" alt="Brand">
+                <img aria-hidden="true" src="/img/FIREBALL.jpg" alt="brand 1">
+                <img aria-hidden="true" src="/img/LINCOLN.jpg" alt="brand 2">
+                <img aria-hidden="true" src="/img/PEM.jpg" alt="brand 3">
+                <img aria-hidden="true" src="/img/TRUMPF-1.jpg" alt="brand 4">
+            </div>
+
+            <div aria-hidden="true" class="marquee_group">
+                <img src="/img/AMADA.jpg" alt="Brand Hidden">
+                <img aria-hidden="true" src="/img/FIREBALL.jpg" alt="brand 1 hidden">
+                <img aria-hidden="true" src="/img/LINCOLN.jpg" alt="brand 2 hidden">
+                <img aria-hidden="true" src="/img/TROAX.jpg" alt="brand 3 hidden">
+                <img aria-hidden="true" src="/img/TRUMPF-1.jpg" alt="brand 4 hidden">
+            </div>
         </div>
     </section>
 
@@ -263,7 +284,286 @@
                     </div>
                 </div>
                 <div class="img-div">
-                    <img src="/img/ship.jpg" alt="Gloria agency">
+                    <img src="/img/city.jpg" alt="Atlantic">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- What We Do -->
+    <section class="what-we-do" id="services">
+        <div class="container">
+            <div class="flex align-items-center">
+                <div class="heading-side">
+                    <h3 class="header" style="text-transform: none;">
+                        Why we are the best ?
+                    </h3>
+
+                    <p class="info mb-4">
+                        We are a team of experienced engineers and designers who are passionate about bringing your
+                        product to life. We offer a wide range of services to help you with all your metal fabrication
+                        needs.
+                    </p>
+
+                    <div class="d-flex gap-3 flex-wrap">
+                        <a title="Call Now" class="btn btn-primary rounded-1 px-5 fs-20 fw-600"
+                            href="tel:+13057928110">Call
+                            Now</a>
+                        <a title="Get a Free Quote" class="btn btn-outline-primary border-2 rounded-1 px-5 fs-20 fw-600"
+                            href="/contact.html">
+                            Get a Free Quote
+                        </a>
+                    </div>
+
+                </div>
+
+                <div class="items">
+                    <div class="item">
+                        <div class="logo-div">
+                            <i class="fa-solid fa-phone"></i>
+                        </div>
+                        <h4 class="title">
+                            Experienced
+                        </h4>
+                        <p class="info">
+                            With years of experience, we
+                            guarantee the best quality and products.
+                        </p>
+                        <a title="Website Packages" class="link" href="/contact.html">Start Now</a>
+                    </div>
+
+                    <div class="item">
+                        <div class="logo-div">
+                            <i class="fa-solid fa-thumbs-up"></i>
+                        </div>
+                        <h4 class="title">
+                            Safety is OUR top priority
+                        </h4>
+                        <p class="info">
+                            For us, occupational safety is a top priority.
+                        </p>
+                        <a title="Website Packages" class="link" href="/contact.html">Start Now</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- <div class="items-grid">
+                <div class="item">
+                    <div class="logo-div">
+                        <i class="fa-solid fa-trophy"></i>
+                    </div>
+                    <h4 class="title">
+                        More Reviews
+                    </h4>
+                    <p class="info">
+                        Online reviews are your word-of-mouth digital marketing strategy. Reach more customers with
+                        ZappySites.
+                    </p>
+                    <a title="Website Packages" class="link" href="#websitePackages">Start Now</a>
+                </div>
+
+                <div class="item">
+                    <div class="logo-div">
+                        <i class="fa-solid fa-arrow-pointer"></i>
+                    </div>
+                    <h4 class="title">
+                        More Website Visitors
+                    </h4>
+                    <p class="info">
+                        Search Engine Optimized websites created by ZappySites help you reach more customers and
+                        increase website visitors.
+                    </p>
+                    <a title="Website Packages" class="link" href="#websitePackages">Start Now</a>
+                </div>
+
+                <div class="item">
+                    <div class="logo-div">
+                        <i class="fa-solid fa-sack-dollar"></i>
+                    </div>
+                    <h4 class="title">
+                        More Leads
+                    </h4>
+                    <p class="info">
+                        Generate leads and boost your business growth by reaching potential customers with a ZappySites
+                        website.
+                    </p>
+                    <a title="Website Packages" class="link" href="#websitePackages">Start Now</a>
+                </div>
+
+                <div class="item">
+                    <div class="logo-div">
+                        <i class="fa-solid fa-bolt"></i>
+                    </div>
+                    <h4 class="title">
+                        Digital Marketing
+                    </h4>
+                    <p class="info">
+                        Digital Marketing to grow your business starts with a professional website designed to reach
+                        more customers.
+                    </p>
+                    <a title="Website Packages" class="link" href="#websitePackages">Start Now</a>
+                </div>
+            </div> -->
+        </div>
+    </section>
+
+
+    <!-- Our Expertise -->
+    <section class="our-expertise mt-4 mb-0">
+        <div class="container">
+            <h3 class="header text-center text-white">Trust Your Marketing With The Experts.</h3>
+            <br>
+            <hr class="border-3 border-white">
+
+            <div class="tab-content clearfix why-us-slider">
+
+                <div class="tab-pane active" id="1a">
+                    <div class="flex">
+                        <div class="info-div">
+                            <p class="heading">
+                                Customer Focused
+                            </p>
+
+                            <p class="info">
+                                We are a team of experienced engineers and designers who are passionate about bringing
+                                your
+                                product to life. We offer a wide range of services to help you with all your metal
+                                fabrication needs.
+                            </p>
+
+                            <ul>
+                                <li><i class="fa-solid fa-check"></i>Product Development</li>
+                                <li><i class="fa-solid fa-check"></i>Machine Design</li>
+                                <li><i class="fa-solid fa-check"></i>Manufacturing Optimization</li>
+                                <li><i class="fa-solid fa-check"></i>Manufacturer Sourcing</li>
+                            </ul>
+
+                            <div class="d-flex gap-3 flex-wrap">
+                                <a title="Call Now" class="btn btn-light rounded-1 px-5 fs-20 fw-600"
+                                    href="tel:+13057928110">Call
+                                    Now</a>
+                                <a title="Get a Free Quote"
+                                    class="btn btn-outline-light border-2 rounded-1 px-5 fs-20 fw-600"
+                                    href="/contact.html">
+                                    Get a Free Quote
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="img-div">
+                            <img src="/img/customer-focused.jpg"
+                                alt="Digital marketing, internet advertising, seo and website design for local businesses in America">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="tab-pane active" id="12a">
+                    <div class="flex">
+                        <div class="info-div">
+                            <p class="heading">
+                                Locally Owned and Operated
+                            </p>
+
+                            <p class="info">
+                                We are a team of experienced engineers and designers who are passionate about bringing
+                                your
+                                product to life. We offer a wide range of services to help you with all your metal
+                                fabrication needs.
+                            </p>
+
+                            <ul>
+                                <li><i class="fa-solid fa-check"></i>Locally owned and operated</li>
+                                <li><i class="fa-solid fa-check"></i>Product Development</li>
+                                <li><i class="fa-solid fa-check"></i>Machine Design</li>
+                                <li><i class="fa-solid fa-check"></i>Manufacturing Optimization</li>
+                            </ul>
+
+                            <div class="d-flex gap-3 flex-wrap">
+                                <a title="Call Now" class="btn btn-light rounded-1 px-5 fs-20 fw-600"
+                                    href="tel:+13057928110">Call
+                                    Now</a>
+                                <a title="Get a Free Quote"
+                                    class="btn btn-outline-light border-2 rounded-1 px-5 fs-20 fw-600"
+                                    href="/contact.html">
+                                    Get a Free Quote
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="img-div">
+                            <img src="/img/locally-owned.jpg"
+                                alt="Digital marketing, internet advertising, seo and website design for local businesses in America">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="tab-pane" id="3a">
+                    <div class="flex">
+                        <div class="info-div">
+                            <p class="heading">
+                                Commitment to quality
+                            </p>
+
+                            <p class="info">
+                                We are a team of experienced engineers and designers who are passionate about bringing
+                                your
+                                product to life. We offer a wide range of services to help you with all your metal
+                                fabrication needs.
+                            </p>
+
+                            <ul>
+                                <li><i class="fa-solid fa-check"></i>Product Development</li>
+                                <li><i class="fa-solid fa-check"></i>Machine Design</li>
+                                <li><i class="fa-solid fa-check"></i>Manufacturing Optimization</li>
+                                <li><i class="fa-solid fa-check"></i>Manufacturer Sourcing</li>
+                            </ul>
+                            <div class="d-flex gap-3 flex-wrap">
+                                <a title="Call Now" class="btn btn-light rounded-1 px-5 fs-20 fw-600"
+                                    href="tel:+13057928110">Call
+                                    Now</a>
+                                <a title="Get a Free Quote"
+                                    class="btn btn-outline-light border-2 rounded-1 px-5 fs-20 fw-600"
+                                    href="/contact.html">
+                                    Get a Free Quote
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="img-div">
+                            <img src="/img/commitment.jpg" alt="Local Business website search engine marketing services.">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Us 1 -->
+    <section class="about-us-cta">
+        <div class="container">
+            <div class="flex">
+                <div class="info-div">
+                    <h3 class="header">
+                        Get in touch with us today
+                    </h3>
+
+                    <p class="info mb-3">
+                        We are here to help you with all your metal fabrication needs. Contact us today to get a free
+                        quote.
+                    </p>
+                    <div class="d-flex gap-3 flex-wrap">
+                        <a title="Call Now" class="btn btn-light rounded-1 px-5 fs-20 fw-600"
+                            href="tel:+13057928110">Call
+                            Now</a>
+                        <a title="Get a Free Quote" class="btn btn-outline-light border-2 rounded-1 px-5 fs-20 fw-600"
+                            href="/contact.html">
+                            Get a Free Quote
+                        </a>
+                    </div>
+                </div>
+
+                <div class="img-div">
+                    <img class="main-img" src="/img/ship.jpg" alt="Atlantic">
                 </div>
             </div>
         </div>
