--- a/oldindex.html
+++ b/oldindex.html
@@ -49,7 +49,7 @@
         <nav class="navbar navbar-expand-xl navbar-dark">
             <div class="container">
                 <div class="logo-section">
-                    <a href="/index.html"><img class="logo" src="/img/logo.png" alt="Gloria Agency Logo Image"></a>
+                    <a href="/index.html"><img class="logo" src="/img/logo.png" alt="Atlantic Logo Image"></a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">
@@ -265,7 +265,7 @@
                     </h3>
                     <p class="mb-4">
                         Finding the right Medicare coverage can indeed be overwhelming and confusing, often leaving
-                        individuals unsure of where to turn for help. But, Gloria Agency Inc.
+                        individuals unsure of where to turn for help. But, Atlantic Inc.
                         shines as your trusted partner to help you find your best medicare solution. With our
                         personalized approach and wide range of coverage
                         options, we're here to guide you through the Medicare landscape with ease, ensuring you receive
@@ -297,7 +297,7 @@
                     </div>
                 </div>
                 <div class="img-div">
-                    <img src="/img/seniors-watching-ground.jpg" alt="Gloria agency">
+                    <img src="/img/seniors-watching-ground.jpg" alt="Atlantic">
                 </div>
             </div>
         </div>
@@ -452,7 +452,7 @@
                         Making Medicare Easy by Providing Expert Guidance You Can Trust
                     </h3>
                     <p class="mb-3 fs-16">
-                        Navigating Medicare shouldn't be a headache. That's why at Gloria Agency Inc., we're dedicated
+                        Navigating Medicare shouldn't be a headache. That's why at Atlantic Inc., we're dedicated
                         to making it simple for you. With our unbiased guidance, you can trust that we have your best
                         interests at heart. Here are four key reasons why choosing us makes Medicare easy:
                     </p>
@@ -473,7 +473,7 @@
                     </ul>
 
                     <div class="d-flex flex-wrap gap-2">
-                        <a title="Gloria Agency" class="btn btn-primary fs-19 px-4" href="/contact.html">
+                        <a title="Atlantic" class="btn btn-primary fs-19 px-4" href="/contact.html">
                             Get A Quote
                         </a>
                         <a title="Medicare Service" class="btn btn-outline-primary border-2 fs-19 fw-500 px-5"
@@ -493,7 +493,7 @@
                 <div class="info-div">
                     <p class="sub-header">About</p>
                     <h3 class="header">
-                        The Gloria Agency Inc.
+                        The Atlantic Inc.
                     </h3>
                     <p class="mb-4">
                         We are a family-owned insurance agency that was established in 2014. Our primary mission is to
@@ -519,7 +519,7 @@
                     </div>
                 </div>
                 <div class="img-div">
-                    <img src="/img/owner.jpg" alt="Gloria agency">
+                    <img src="/img/owner.jpg" alt="Atlantic">
                 </div>
             </div>
         </div>
@@ -820,7 +820,7 @@
             <hr class="mt-4" />
 
 
-            <p class="pt-2 pb-3 fw-500 text-info text-center">&copy Gloria Agency 2024. All rights
+            <p class="pt-2 pb-3 fw-500 text-info text-center">&copy Atlantic 2024. All rights
                 reserved.</p>
             <p class="pt-2 pb-3 fw-500 text-info text-center">The content available on this website is owned by us and
                 our licensors. Copying any content, including images, without our consent is prohibited.</p>
