--- a/resources.html
+++ b/resources.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
-    <title>Resources - Gloria Agency Inc.</title>
+    <title>Resources - Atlantic Inc.</title>
 
     <meta name="description"
-        content="Explore Medicare resources with Gloria Agency Inc. Our Medicare advisors offer guidance on Medicare Part D, supplements, and more in Illinois, Texas, and Wisconsin.">
+        content="Explore Medicare resources with Atlantic Inc. Our Medicare advisors offer guidance on Medicare Part D, supplements, and more in Illinois, Texas, and Wisconsin.">
     <meta name="keywords" content="medicare services, medicare part d, medicare supplement, medicare advisors">
 
 
@@ -44,7 +44,7 @@
         <nav class="navbar navbar-expand-xl navbar-dark">
             <div class="container">
                 <div class="logo-section">
-                    <a href="/index.html"><img class="logo" src="/img/logo.png" alt="Gloria Agency Logo Image"></a>
+                    <a href="/index.html"><img class="logo" src="/img/logo.png" alt="Atlantic Logo Image"></a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">
@@ -375,7 +375,7 @@
             <hr class="mt-4" />
 
 
-            <p class="pt-2 pb-3 fw-500 text-info text-center">&copy Gloria Agency 2024. All rights
+            <p class="pt-2 pb-3 fw-500 text-info text-center">&copy Atlantic 2024. All rights
                 reserved.</p>
             <p class="pt-2 pb-3 fw-500 text-info text-center">The content available on this website is owned by us and
                 our licensors. Copying any content, including images, without our consent is prohibited.</p>
